@@ -55,8 +55,8 @@
   <string id="30019">Linux Unplugged</string>
   <string id="30219">Cleans up after the sloppy seconds of the Linux Action Show.</string>
 
-  <string id="30021">BSD Now!</string>
-  <string id="30221">All things BSD"</string>
+  <string id="30020">BSD Now!</string>
+  <string id="30220">All things BSD"</string>
 
   <!-- Settings -->
   <string id="30100">General</string>
