@@ -1,5 +1,6 @@
 [B]Version 3.0.1:September 15th, 2013[/B]
 - New Show: BSD Now
+- Ammended language numbering to match system
 
 [B]Version 3.0.0: August 21st, 2013[/B]
 - Direct support for XBMC Frodo
